--- a/templates/main.html
+++ b/templates/main.html
@@ -8,5 +8,6 @@
     <script src="static/d3.v5.min.js"></script>
     <script src="static/d3-tip.js"></script>
     <script src="static/main.js"></script>
+    <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
 </body>
 </html>
