removed old scraper files, added network analysis into tip, json configuration to have centrality

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
     
     
     <script src="static/d3.v5.min.js"></script>
-    <script src="http://unpkg.com/d3-force-bounce"></script>
-    <script src="http://unpkg.com/d3-force-surface"></script>
+    <script src="static/d3-force-bounce.min.js"></script>
+    <script src="static/d3-force-surface.min.js"></script>
     <script src="static/index.js"></script>
 </body>
 </html>
