--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -55,7 +55,99 @@
     z-index:2;
     cursor: pointer; 
 }
-#chart {
+#player {
+    box-shadow: 0 4px 80px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.04);
+}
+.centering-container {
+    margin:auto;
+    width:fit-content;
+}
+.popularity {
+    position:relative;
+    padding:10px 2vw;
+}
+.popularity + .popularity::after {
+    content: "";
+    background: rgb(192, 192, 192);
+    position:absolute;
+    bottom: 15%;
+    left: 0%;
+    height: 70%;
+    width: 1px;
+}
+.spotify-toggle {
+    position: relative;
+    display: inline-block;
+    margin-bottom:15px;
+    text-decoration: none;
+    padding: 10px 1vw;
+    color: rgb(100, 100, 100)
+}
+.spotify-toggle.selected {
+    font-weight:700;
+}
+.spotify-toggle + .spotify-toggle::after {
+  content: "";
+  background: rgb(192, 192, 192);
+  position:absolute;
+  bottom: 15%;
+  left: 0%;
+  height: 70%;
+  width: 1px;
+}
+.title{
+    padding:0 0 10px 0;
+    font-size:36;
+    position:relative;
+}
+.title::after{
+  content: "";
+  background: rgb(48, 48, 48);
+  position:absolute;
+  bottom: 0px;
+  left: 0%;
+  height: 1px;
+  width: 100%;
+}
+
+.genre-content {
+  content: "";
+  background: rgb(192, 192, 192);
+  position:absolute;
+  bottom: -5px;
+  left: 15%;
+  height: 1px;
+  width: 700%;
+}
+.genre-content-container{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.04);
+    padding: 20px;
+    background-color:white;
+    color: rgb(48, 48, 48)
+}
+#genre-page {
+    margin:40px 20px 20px 20px;
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    display: grid;
+    grid-template-columns: repeat(18, 1fr);
+    grid-auto-rows: auto 1fr;
+    grid-gap: 30px;
+}
+#genre-heading{
+    display:inline-block;
+    margin:0;
+    font-size: 60;
+}
+.subtitle {
+    display:block;
+    color: rgb(192, 192, 192);
+    font-size: 20;
+    font-style:italic;
+}
+.fullscreen {
     position: fixed;
     left: 0px;
     right: 0px;
