--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -9,24 +9,175 @@
     font-family: 'Circular', Arial, Helvetica, sans-serif;
     pointer-events:none;
 }
-#sidebar-wrapper {
-    width: fit-content;
+div.zoom, div.expand{
+    opacity:0;
+    display:none
+}
+.note:hover .note-text {
     display:inline-block;
-    height: 100%;
+}
+.note.zoom .note-text {
+    background-color: rgb(30, 30, 30, 0.8);
+    color:rgb(192, 192, 192);
+}
+.note.zoom .note-text b {
+    color:white
+}
+.note.background .note-text {
+    background-color: rgb(255, 255, 255, 0.8);
+}
+.note.background {
+    color:rgb(192, 192, 192);
+}
+.note.background:hover {
+    color:rgb(96, 96, 96);
+}
+.note {
+    cursor:help;
+    display:flex;
+    z-index: 1000;
+    font-size: 36;
+}
+.note-text {
+    padding:10px;
+    display: none;
+    font-size: 14;
+}
+#main-note {
+    flex-direction: row;
+    position: absolute;
+    top:50px;
+    right:50px;
+}
+#main-note-text {
+    margin:35px 5px 0 0;
+    color:rgb(96, 96, 96);
+    text-align: right;
+    max-width:500px;
+}
+
+#sidebar-note {
+    margin-bottom: 50px;
+    flex-direction: row;
+    align-items: flex-end;
+    height:fit-content;
+}
+#sidebar-note-text {
+    padding-left: 10px;
+    color:rgb(96, 96, 96);
+    text-align: left;
+    max-width:500px;
+}
+#zoom-note {
+    padding-top:10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: rgb(48, 48, 48,);
+    z-index:1000;
+    position: absolute;
+    max-width: 400px;
+    bottom:75px;
+    left:50%;
+    transform: translate(-50%);
+}
+
+#expand-note {
+    color: rgb(96, 96, 96,);
+    position: absolute;
+    left: 0px;
+    top:50px;
+    /* grid-area: 1/1/3/4; */
+    /* max-width: 15vw; */
+    max-width: 450;
+    flex-direction: column;
+}
+#expand-note-text {
+    overflow-y: scroll;
+    max-height: 70vh;
+    padding: 10px;
+    margin-left: 10px;
+    background-color: rgb(30, 30, 30, 0.8);
+    color:rgb(192, 192, 192);
+}
+#expand-note-text b {
+    color: white;
+    font-size: 16;
+}
+#expand-note-text u {
+    color:white;
+}
+
+.esc-button {
+    z-index: 1000;
+    cursor: pointer;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    width:90px;
+    height:90px;
+    color: rgb(96, 96, 96);
+    position:absolute;
+    right:50px;
+    top:40px;
+}
+.esc-button:hover {
+    background-color: rgba(0,0,0,0.05);
+    color:rgb(48, 48, 48)
+}
+#sidebar-general {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
+#sidebar-wrapper {
+    height:100vh;
+    display:flex;
+    flex-direction: column;
+    width: fit-content;
+    width: -moz-fit-content;
     overflow: hidden;
 }
-#sidebar {
-    pointer-events:none;
-    width:100%;
+#sidebar-selector {
     z-index: 1000;
-    position: relative;
-    height: 100%;
-    padding-right: 20px;
+    padding:5px;
+    pointer-events: none;
+    min-height:30px;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.sidebar-options {
+    cursor: pointer;
+    color: rgb(192, 192, 192);
+    flex-grow: 1;
+    font-size: 20;
+    font-style: italic;
+    pointer-events: auto;
+    text-align: center;
+    font-weight: normal;
+}
+.sidebar-options:hover {
+    color: rgb(144, 144, 144);
+}
+.sidebar-options-selected {
+    color: rgb(48, 48, 48);
+    font-weight: bold;
+}
+#sidebar {
+    -ms-overflow-style: none; /* IE 11 */
+    scrollbar-width: none; /* Firefox 64 */
+    pointer-events:none;
+    z-index: 1000;
+    flex-grow: 1;
+    padding:5px;
     overflow-y: scroll; /* Increase/decrease this value for cross-browser compatibility */
     box-sizing: content-box;
 }
 #sidebar p{
-    cursor: pointer;
     line-height:1;
     padding-bottom: 0.3rem;
     pointer-events:auto;
@@ -226,6 +377,7 @@ iframe {
     bottom:0;
 }
 #genre-page {
+    width:100vw;
     max-width:1920px;
     padding:40px 0px 20px 0px; overflow: auto;
     -ms-overflow-style: none; /* IE 11 */
@@ -300,32 +452,37 @@ iframe {
 @font-face{
     font-family: 'Circular';
     src: url('fonts/circular-book.woff2');
+    font-style: normal;
     font-weight: 400;
 }
 @font-face {
     font-family: 'Circular';
-    src: url('fonts/circular-black.woff2');
+    src: url('fonts/circular-black.woff2') format("woff2");
+    font-style: normal;
     font-weight: 900;
 }
 @font-face{
     font-family: 'Circular';
-    src: url('fonts/circular-bold.woff2');
+    src: url('fonts/circular-bold.woff2') format("woff2");
+    font-style: normal;
     font-weight: 700;
 }
 @font-face {
     font-family: 'Circular';
-    src: url('fonts/circular-book-italic.woff2');
+    src: url('fonts/circular-book-italic.woff2') format("woff2");
+    font-weight: 400;
     font-style: italic;
 }
 @font-face {
     font-family: 'Circular';
-    src: url('fonts/circular-bold-italic.woff2');
+    src: url('fonts/circular-bold-italic.woff2') format("woff2");
     font-style: italic;
     font-weight: 700;
 }
 @font-face{
     font-family: 'Circular';
-    src: url('fonts/circular-light.woff2');
+    src: url('fonts/circular-light.woff2') format("woff2");
+    font-style: normal;
     font-weight: 300;
 }
 .blurb-no-hover {
@@ -333,6 +490,7 @@ iframe {
     z-index: 100;
 }
 body {
+    margin:1px;
     font-family: 'Circular';
     width: 100%;
     height:100%;
